# benchcam

./: .gitignore  README.md  pyproject.toml  reviewer.py
docs/: session-format.md
examples/example_session/: artifacts.csv  markers.csv  notes.md  review.md  session.json
scripts/: benchcam-dashboard.bat  benchcam-dashboard.ps1  benchcam-dashboard.vbs
src/benchcam/: __init__.py  __main__.py  artifacts.py  cli.py  clock.py  config.py  dashboard.py  editor.py  keypress.py  label.py  live.py  markers.py  review.py  session.py  transcribe.py
src/benchcam/inputs/: __init__.py  keyboard_input.py
src/benchcam/recorders/: __init__.py  base.py  collect.py  ffmpeg.py  null.py  obs.py
tests/: test_artifacts.py  test_cli.py  test_collect.py  test_dashboard.py  test_editor.py  test_ffmpeg_recorder.py  test_keyboard_input.py  test_label.py  test_launcher.py  test_live.py  test_markers.py  test_obs_recorder.py  test_recorders.py  test_review.py  test_session.py  test_transcribe.py
