[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "benchcam"
version = "0.0.1"
description = "Local-first bench-side capture and marker logging tool for hardware work."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Harrison Powe" }]
keywords = ["bench", "capture", "markers", "logging", "hardware"]
dependencies = []

[project.optional-dependencies]
# OBS recorder backend only. The core is stdlib-only; this extra is imported
# lazily inside benchcam/recorders/obs.py, so 'pip install benchcam' (without
# [obs]) never pulls in or requires obsws-python.
obs = ["obsws-python>=1.7"]
dev = ["pytest>=7"]

[project.scripts]
benchcam = "benchcam.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
