[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "benchcam"
version = "0.0.1"
description = "Local-first bench-side capture and marker logging tool for hardware work."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Harrison Powe" }]
keywords = ["bench", "capture", "markers", "logging", "hardware"]
dependencies = []

[project.optional-dependencies]
# OBS recorder backend only. The core is stdlib-only; this extra is imported
# lazily inside benchcam/recorders/obs.py, so 'pip install benchcam' (without
# [obs]) never pulls in or requires obsws-python.
obs = ["obsws-python>=1.7"]
# Local Whisper transcription for 'benchcam transcribe' only. Imported lazily
# inside benchcam/transcribe.py, so 'pip install benchcam' (without [transcribe])
# never pulls in openai-whisper or torch. Keep this OFF the Raspberry Pi install —
# it is meant for the laptop that has the GPU/RAM to run Whisper.
transcribe = ["openai-whisper>=20231117"]
# Claude API summarization for 'benchcam label' only. Imported lazily inside
# benchcam/label.py, so 'pip install benchcam' (without [label]) never pulls in
# the anthropic SDK. Meant for the laptop; needs $ANTHROPIC_API_KEY at runtime.
label = ["anthropic>=0.40"]
dev = ["pytest>=7"]

[project.scripts]
benchcam = "benchcam.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
